--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,5 +1,5 @@
 # Create a .env.development and a .env.production file
 # with the following keys.
 # Do NOT check these files into source control
-DATOCMS_API_TOKEN=""
+DATOCMS_API_TOKEN="cf7743b0592f8b99bd83b1d68b7d1d"
 DATOCMS_ENVIRONMENT=""
