--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
+    "@react-spring/parallax": "^9.7.1",
     "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "^1.9.0",
     "@vanilla-extract/css-utils": "^0.1.2",
@@ -39,6 +40,7 @@
     "react-feather": "^2.0.9",
     "react-icons": "^4.8.0",
     "sharp": "^0.30.5",
+    "simple-parallax-js": "^5.6.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
