--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-webfonts": "^2.3.2",
     "gatsby-source-datocms": "^5.0.0-3",
     "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-source-instagram-all": "^5.2.4",
     "gatsby-transformer-sharp": "^5.0.0",
     "is-absolute-url": "^4.0.1",
     "react": "^18.0.0",
