--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "react-icons": "^4.8.0",
     "sharp": "^0.30.5",
     "simple-parallax-js": "^5.6.2",
+    "slugify": "^1.6.6",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
+    "@types/react-html-parser": "^2.0.2",
     "@types/styled-components": "^5.1.26",
     "chalk": "^4.1.0",
     "husky": "^7.0.4",
