--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-manifest": "^5.0.0-next.4",
+    "gatsby-plugin-react-helmet": "^6.8.0",
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-plugin-styled-components": "^6.7.0",
     "gatsby-plugin-vanilla-extract": "^4.0.1",
