--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/webpack-plugin": "^2.1.12",
     "babel-plugin-styled-components": "^2.0.7",
+    "cypress": "^12.9.0",
     "datocms-structured-text-to-html-string": "^2.1.3",
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
